# FlowWeaver

./: .gitignore  FlowWeaver_CONTINUE_INDEPENDENT策略收口清单.md  FlowWeaver_阶段H后置_并行默认启用前置条件清单.md  FlowWeaver_阶段K_最小桌面UI与K0前置收口计划.md  FlowWeaver_阶段L.1a_后端运行入口收口.md  FlowWeaver_阶段L.1b_桌面端运行入口收口.md  FlowWeaver_阶段L.2_UI连接配置持久化边界.md  FlowWeaver_阶段L.2d_连接配置失败场景验收复核.md  FlowWeaver_阶段L.3a_空数据库正式路径烟雾执行记录.md  FlowWeaver_阶段L_总体验收复核.md  LICENSE  README.md  alembic.ini  pyproject.toml
Avalonia_UI/: App.axaml  (+6 more)
Avalonia_UI.Tests/: AppShellPageHostStructureTests.cs  Avalonia_UI.Tests.csproj  BackgroundRunManagementViewModelTests.cs  BuiltinNodeEditorsTests.cs  BuiltinShellPagesTests.cs  ConnectionSettingsStoreTests.cs  DataPreviewPageStructureTests.cs  DataPreviewSelectionStateTests.cs  DataPreviewStateListItemViewModelTests.cs  DataPreviewTableGridBuilderTests.cs  DataPreviewWorkbenchGridStateTests.cs  DesktopPublishApiClientSmokeTests.cs  DesktopPublishRuntimeEventSmokeTests.cs  DesktopPublishWorkflowRunEventSmokeTests.cs  EngineHostApiClientTests.cs  EngineHostConnectionDiagnosticsTests.cs  EngineHostConnectionSettingsTests.cs  EngineHostFormalSmokeTests.cs  EngineHostHealthClientTests.cs  JsonLocalizationServiceTests.cs  MainWindowShellStructureTests.cs  MainWindowViewModelConnectionSettingsTests.cs  MainWindowViewModelDataTests.cs  MainWindowViewModelLocalizationTests.cs  MainWindowViewModelLogTests.cs  MainWindowViewModelNotificationTests.cs  MainWindowViewModelRuntimeEventTests.cs  MainWindowViewModelWorkflowTests.cs  NodeConfigComboBoxBindingTests.cs  NodeConfigDefaultBuilderTests.cs  (+49 more)
(+1761 files in other folders)
