[project]
name = "flowweaver"
version = "0.1.0"
description = "Modular local data workflow runtime platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "msgpack>=1.1.0",
    "pydantic>=2.11.0",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.0",
    "pytest-qt>=4.4.0",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
